tests/rosetta/out/Java/algebraic-data-types.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:31:49Z
// algebraic-data-types.mochi
import java.util.*;

public class AlgebraicDataTypes {
    static any tr = null;
    static Map<String,any> node(String cl, any le, int aa, any ri) {
        return new ClLeAaRi(cl, le, aa, ri);
    }
    static String treeString(any t) {
        if (Objects.equals(t, null)) {
            return "E";
        }
        Map<String,any> m = (Map<String,any>)t;
        return ((Number)((Number)((Number)((Number)((Number)((Number)((Number)"T(" + ((Number)m.get("cl")).doubleValue()).doubleValue() + ", ").doubleValue() + ((Number)treeString(m.get("le"))).doubleValue()).doubleValue() + ", ").doubleValue() + ((Number)String.valueOf(m.get("aa"))).doubleValue()).doubleValue() + ", ").doubleValue() + ((Number)treeString(m.get("ri"))).doubleValue()).doubleValue() + ")";
    }
    static any balance(any t) {
        if (Objects.equals(t, null)) {
            return t;
        }
        Map<String,any> m = (Map<String,any>)t;
        if (!Objects.equals(m.get("cl"), "B")) {
            return t;
        }
        Map<String,any> le = m.get("le");
        Map<String,any> ri = m.get("ri");
        if (!Objects.equals(le, null)) {
            Map<String,any> leMap = (Map<String,any>)le;
            if (Objects.equals(leMap.get("cl"), "R")) {
                Map<String,any> lele = leMap.get("le");
                if (!Objects.equals(lele, null)) {
                    Map<String,any> leleMap = (Map<String,any>)lele;
                    if (Objects.equals(leleMap.get("cl"), "R")) {
                        return node("R", node("B", leleMap.get("le"), leleMap.get("aa"), leleMap.get("ri")), leMap.get("aa"), node("B", leMap.get("ri"), m.get("aa"), ri));
                    }
                }
                Map<String,any> leri = leMap.get("ri");
                if (!Objects.equals(leri, null)) {
                    Map<String,any> leriMap = (Map<String,any>)leri;
                    if (Objects.equals(leriMap.get("cl"), "R")) {
                        return node("R", node("B", leMap.get("le"), leMap.get("aa"), leriMap.get("le")), leriMap.get("aa"), node("B", leriMap.get("ri"), m.get("aa"), ri));
                    }
                }
            }
        }
        if (!Objects.equals(ri, null)) {
            Map<String,any> riMap = (Map<String,any>)ri;
            if (Objects.equals(riMap.get("cl"), "R")) {
                Map<String,any> rile = riMap.get("le");
                if (!Objects.equals(rile, null)) {
                    Map<String,any> rileMap = (Map<String,any>)rile;
                    if (Objects.equals(rileMap.get("cl"), "R")) {
                        return node("R", node("B", m.get("le"), m.get("aa"), rileMap.get("le")), rileMap.get("aa"), node("B", rileMap.get("ri"), riMap.get("aa"), riMap.get("ri")));
                    }
                }
                Map<String,any> riri = riMap.get("ri");
                if (!Objects.equals(riri, null)) {
                    Map<String,any> ririMap = (Map<String,any>)riri;
                    if (Objects.equals(ririMap.get("cl"), "R")) {
                        return node("R", node("B", m.get("le"), m.get("aa"), riMap.get("le")), riMap.get("aa"), node("B", ririMap.get("le"), ririMap.get("aa"), ririMap.get("ri")));
                    }
                }
            }
        }
        return t;
    }
    static any ins(any tr, int x) {
        if (Objects.equals(tr, null)) {
            return node("R", null, x, null);
        }
        if (x < ((Number)((Map<?,?>)tr).get("aa")).doubleValue()) {
            return balance(node(((Map<?,?>)tr).get("cl"), ins(((Map<?,?>)tr).get("le"), x), ((Map<?,?>)tr).get("aa"), ((Map<?,?>)tr).get("ri")));
        }
        if (x > ((Number)((Map<?,?>)tr).get("aa")).doubleValue()) {
            return balance(node(((Map<?,?>)tr).get("cl"), ((Map<?,?>)tr).get("le"), ((Map<?,?>)tr).get("aa"), ins(((Map<?,?>)tr).get("ri"), x)));
        }
        return tr;
    }
    static any insert(any tr, int x) {
        any t = ins(tr, x);
        if (Objects.equals(t, null)) {
            return null;
        }
        Map<String,any> m = (Map<String,any>)t;
        return node("B", m.get("le"), m.get("aa"), m.get("ri"));
    }
    public static void main(String[] args) {
    int i = 1;
    while (i <= 16) {
        tr = insert(tr, i);
        i = (int)(i + 1);
    }
    System.out.println(treeString(tr));
    }
}
